Bug 1508954 - Avoid accidentally overriding rules that collapse toolbars when in fullscreen mode. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D12585

UltraBlame original commit: c13be2ae74f11ff7b7869d9cacd58158e217fad4

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -294,11 +294,11 @@
 
 
 
-  #titlebar:-moz-lwtheme {
+  :root:not([inDOMFullscreen]) #titlebar:-moz-lwtheme {
     visibility: hidden;
   }
-  #toolbar-menubar:-moz-lwtheme,
-  #TabsToolbar:-moz-lwtheme {
+  :root:not([inDOMFullscreen]) #toolbar-menubar:-moz-lwtheme,
+  :root:not([inDOMFullscreen]) #TabsToolbar:-moz-lwtheme {
     visibility: visible;
   }
 }
